--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,6 @@ framework = arduino
 lib_deps = 
 	olikraus/U8g2@^2.36.2
 	z3t0/IRremote@^4.4.1
+	; adafruit/Adafruit-PN532@^1.3.3
+	; sandeepmistry/arduino-LoRa@^0.8.0
 monitor_speed = 115200
